# ggweb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
public/: helpers.js  index-tmpl.html  style.css
src/: CMakeLists.txt  common.cpp  common.h  icons-font-awesome.h  main.cpp  state-core.cpp  state-core.h  state-sdl.cpp  state-sdl.h
